--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,17 @@
-cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 project(Core)
 
 get_filename_component(CoreRoot ${CMAKE_CURRENT_LIST_FILE} PATH)
 
+include(${CoreRoot}/CompileOptions/CompileOptions.cmake)
+
 include(${CoreRoot}/Core/Core.cmake)
 
-if(BUILD_TESTS)
+if(TESTS)
+    enable_testing()
     include(${CoreRoot}/Tests/CoreTests.cmake)
 endif()
 
-if(BUILD_BENCHMARKS)
+if(BENCHMARKS)
     include(${CoreRoot}/Benchmarks/CoreBenchmarks.cmake)
 endif()
