--- a/.github/workflows/TestsCoverage.yml
+++ b/.github/workflows/TestsCoverage.yml
@@ -3,7 +3,7 @@ name: CMake
 on: [push]
 
 jobs:
-  build:
+  upload_coverage:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
@@ -14,11 +14,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Build & test
-      working-directory: ${{runner.workspace}}
+      working-directory: ${{github.workspace}}
       shell: bash
       run: make run_coverage
 
     - name: Upload coverage
-      working-directory: ${{runner.workspace}}
+      working-directory: ${{github.workspace}}
       shell: bash
       run: bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Error while collecting coverage reports"
