--- a/.github/workflows/TestsCoverage.yml
+++ b/.github/workflows/TestsCoverage.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Install dependencies
-      run: sudo apt-get install -y ninja-build lcov libgtest-dev
+      run: sudo apt-get install -y ninja-build lcov libgtest libgtest-dev
 
     - name: Build & test
       working-directory: ${{github.workspace}}
