--- a/.github/workflows/TestsCoverage.yml
+++ b/.github/workflows/TestsCoverage.yml
@@ -12,7 +12,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      
+      with:
+        submodules: 'true'
+
     - name: Install ninja toolchain
       run: sudo apt-get install -y ninja-build
 
