--- a/.github/workflows/WindowsTests.yml
+++ b/.github/workflows/WindowsTests.yml
@@ -1,4 +1,4 @@
-name: Windows Build
+name: Windows Tests
 
 on: [push]
 
@@ -34,7 +34,7 @@ jobs:
 
     - name: Run toolchain
       working-directory: ${{github.workspace}}/Build
-      run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_TOOLCHAIN_FILE=${{runner.workspace}}/Cache/vcpkg/scripts/buildsystems/vcpkg.cmake
+      run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DTESTS=ON -DCMAKE_TOOLCHAIN_FILE=${{runner.workspace}}/Cache/vcpkg/scripts/buildsystems/vcpkg.cmake
 
     - name: Build
       working-directory: ${{github.workspace}}/Build
