--- a/.github/workflows/LinuxTests.yml
+++ b/.github/workflows/LinuxTests.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: 'true'
+        submodules: 'recursive'
 
     - name: Install ninja toolchain
       run: sudo apt-get install -y ninja-build
